--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-MONGODB_URI = "mongodb+srv://ahmadbati734:mSK67ZEO41vi8yXp@cluster0.4v2ohv7.mongodb.net/"
+MONGODB_URI = ""
 
-RESEND_API_KEY = "re_SM5pZvJ1_JdM5HMZsoyAR8U9FgCtxBS6G"
+RESEND_API_KEY = ""
 
-NEXTAUTH_SECRET= "e78f11568b6d5f97f5910c952c036c9e"
+NEXTAUTH_SECRET= ""
